--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "cli": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
@@ -17,6 +17,7 @@
     "vue-picture-input": "^2.1.6",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.4.9",
+    "vue-sweetalert2": "^4.3.1",
     "vuetify": "^2.2.11",
     "vuex": "^3.6.0"
   },
