--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "cli": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "start":"node server.js"
   },
   "dependencies": {
     "@vue/cli": "^4.5.12",
