--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "cli": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "start":"node server.js"
+    "start": "node server.js"
   },
   "dependencies": {
     "@vue/cli": "^4.5.12",
@@ -15,6 +15,7 @@
     "material-design-icons-iconfont": "^6.1.0",
     "nuxt": "^2.14.12",
     "vue": "^2.6.12",
+    "vue-loading-overlay": "^4.0.1",
     "vue-picture-input": "^2.1.6",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.4.9",
