--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "material-design-icons-iconfont": "^6.1.0",
     "nuxt": "^2.14.12",
     "vue": "^2.6.12",
+    "vue-line-clamp": "^1.3.2",
     "vue-loading-overlay": "^4.0.1",
     "vue-picture-input": "^2.1.6",
     "vue-resource": "^1.5.1",
